fixed content shift

--- a/stylesheets/_menu.scss
+++ b/stylesheets/_menu.scss
@@ -27,6 +27,7 @@
 .hamburger-move-content{
   margin: 0;
   right:25%;
+  position: fixed;
 }
 .hamburger-show-menu{
   margin: 0;
